--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.512.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
